--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node src/server.js"
   },
   "name": "youcord",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Youtube Rich Presence for Discord",
   "main": "src/server.js",
   "devDependencies": {},
@@ -23,7 +23,7 @@
     "presence"
   ],
   "author": "Biscuit",
-  "license": "MIT",
+  "license": "GPLv2",
   "bugs": {
     "url": "https://github.com/AcedArmy/youcord/issues"
   },
