--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "discord-rich-presence": "^0.0.7",
     "moment": "^2.22.2",
+    "node-fetch": "^2.2.0",
     "socket.io": "^2.1.1"
   },
   "scripts": {
     "start": "node src/server.js"
   },
   "name": "youcord",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "A Youtube Rich Presence for Discord",
   "main": "src/server.js",
   "devDependencies": {},
